@@ -2,12 +2,13 @@ package com.alpha.learn.jdk;
 
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.Test;
+import java.lang.reflect.Field;
+import java.util.*;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import java.util.Iterator;
-import java.util.List;
-
+@SuppressWarnings("ALL")
 @Slf4j
-public class ArrayListTest {
+public class NonSynchronizedListTest {
 
     /**
      *  public void testFastFail();
@@ -38,16 +39,18 @@ public class ArrayListTest {
      *         54: pop
      *         55: goto          28
      *         58: return
-     * }
+     *
      */
-    //     49: invokeinterface #44,  2           // InterfaceMethod java/util/List.remove:(Ljava/lang/Object;)Z
+    // 49: invokeinterface #44,  2           // InterfaceMethod java/util/List.remove:(Ljava/lang/Object;)Z
     // modCount++
     @Test
     public void testFastFail() {
-        List<String> containers = new java.util.ArrayList<>(List.of("foo", "bar", "test", "oo", "xx"));
-        for(String container : containers) {
-            containers.remove(container);
-        }
+        List<String> containers = new ArrayList<>(List.of("foo", "bar", "test", "oo", "xx"));
+        assertThrows(ConcurrentModificationException.class ,() -> {
+            for(String container : containers) {
+                containers.remove(container);
+            }
+        });
     }
 
     /**
@@ -79,13 +82,13 @@ public class ArrayListTest {
      *         55: invokeinterface #51,  1           // InterfaceMethod java/util/Iterator.remove:()V
      *         60: goto          28
      *         63: return
-     * }
+     *
      */
-    //  *         55: invokeinterface #51,  1           // InterfaceMethod java/util/Iterator.remove:()V
-    // modCount++, expectedModCount = modCount;
+    // 55: invokeinterface #51,  1           // InterfaceMethod java/util/Iterator.remove:()V
+    // modCount++ && expectedModCount = modCount;
     @Test
     public void testFastFail1() {
-        List<String> containers = new java.util.ArrayList<>(List.of("foo", "bar", "test", "oo", "xx"));
+        List<String> containers = new ArrayList<>(List.of("foo", "bar", "test", "oo", "xx"));
         Iterator<String> iterator = containers.iterator();
         while (iterator.hasNext()) {
             if (!iterator.next().equals("foo")) {
@@ -95,4 +98,74 @@ public class ArrayListTest {
        log.info("containers:{}", containers);
     }
 
+    // --add-opens java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
+    @Test
+    public void testTrimToSize() throws Exception {
+        ArrayList<String> list = new ArrayList<>(100);
+        list.add("a");
+        list.add("b");
+
+        log.info("Before trim, capacity: {}", capacity(list));
+        list.trimToSize();
+        log.info("After trim, capacity: {}", capacity(list));
+    }
+
+    private static int capacity(ArrayList<?> list) throws Exception {
+        Field elementDataField = ArrayList.class.getDeclaredField("elementData");
+        elementDataField.setAccessible(true);
+        Object[] elementData = (Object[]) elementDataField.get(list);
+        return elementData.length;
+    }
+
+    @Test
+    public void testToArray() throws Exception {
+        ArrayList<String> list = new ArrayList<>();
+        list.add("a");
+        list.add("b");
+        Object[] array = list.toArray();
+        String[] stringArray = list.toArray(new String[]{});
+        log.info("array:{}", Arrays.toString(stringArray));
+        log.info("object array:{}", Arrays.toString(array));
+    }
+
+    // cursor mark
+    Object[] objects =  new Object[]{10,"20",30};
+    @Test
+    public void testListIterator() {
+        List<String> containers = new ArrayList<>(List.of("foo", "bar", "test", "oo", "xx"));
+        ListIterator<String> iterator = containers.listIterator();
+        while (iterator.hasNext()) {
+            String s = iterator.next();
+            log.info("e: {}, hasPrevious: {}", s,  iterator.hasPrevious());
+        }
+        log.info("---------------------------");
+        iterator.remove();
+        ListIterator<String> iterator1 = containers.listIterator(2);
+        while (iterator1.hasNext()) {
+            String s = iterator1.next();
+            log.info("e: {}, hasPrevious: {}", s,  iterator1.hasPrevious());
+        }
+        log.info("---------------------------");
+        List<String> strings = containers.subList(2, 3);
+        ListIterator<String> iterator2 = strings.listIterator();
+        while (iterator2.hasNext()) {
+            String s = iterator2.next();
+            log.info("e: {}, hasPrevious: {}", s,  iterator2.hasPrevious());
+        }
+        containers.clear();
+        log.info("size:{}", containers.size());
+        Object[] copy = objects;
+        copy[0] = "test";
+        log.info("copy:{}", Arrays.toString(copy));
+        log.info("objects:{}", Arrays.toString(objects));
+    }
+
+    @Test
+    public void testEmptyElementData() throws Exception {
+        ArrayList<String> empty = new ArrayList<>(0);
+        empty.add("test for common element data");
+
+        ArrayList<String> defaultEmpty = new ArrayList<>();
+        defaultEmpty.add("test for default element data");
+    }
 }
